Completed model selection. Added markdown notes in each notebook.

--- a/Trips Data Cleaning V1.ipynb
+++ b/Trips Data Cleaning V1.ipynb
@@ -37,6 +37,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The goal of this notebook is to load in the millions of rideshare rides into a single dataframe, clean, then export this data for further analysis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -781,18 +788,6 @@
     "\n",
     "pos_data.to_csv(r'C:\\Users\\brandin_hirsch\\Desktop\\pos_data_v3.csv')\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
