Changes to text in the Network Analysis file

--- a/Trips Network Analysis V1.ipynb
+++ b/Trips Network Analysis V1.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The goal of this notebook was perform a network analysis on the Trips dataset, using the census tracts as nodes, and the start and end locations to identify connections \n",
+    "# The goal of this notebook was to perform a network analysis on the Trips dataset, using the census tracts as nodes, and the start and end locations of each trip to identify connections \n",
     "\n",
     "- Based on this network analysis, I will be able to cluster the nodes in the network based on connections\n",
     "- It is my hypothesis that nodes in the same community clusters will have similar patterns in rideshare volume across time\n",
@@ -225,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using the number of pickups/dropoffs in each node as the node size, we can visually see which census tracts have the highest overall volume of rideshare traffic"
+    "# Using the number of rides in each node as the node size, we can visually see which census tracts have the highest overall volume of rideshare traffic across time"
    ]
   },
   {
@@ -489,6 +489,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Let's slice the main dataframe by community to create 4 new dataframes, and observe a small piece of time series data\n",
+    "\n",
+    "# Note the strong daily and weekly seasonality "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 191,
    "metadata": {
@@ -661,7 +670,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
